# ComplexOpinion

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: ci.yml
complex_opinion/: __init__.py  core.py  f2py_compile.sh  f90_opinion.f90  fpb.mod  random_module.f90  randomize.mod
data/: Mahdi_data  Mahdi_data_1  Mahdi_data_2
examples/: exploration.ipynb
tests/: conftest.py  test_core.py
