[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "complex_opinion"
version = "0.0.1a1"
dependencies = [
    "numpy",
    "networkx",
]
# copy y warnings están built-in aparentemente (i.e. no hay que importarlas)

requires-python = ">=3.7"
# la compatibilidad con 3.7 es importante porque Read the Docs
# y Colab usan 3.7

authors = [{name = "Jerónimo Fotinós", email = "jerofoti@gmail.com"}, {name = "María Cecilia Gimenez", email = "cecilia.gimenez@unc.edu.ar"}, {name = "Mahdi"}]

readme = "README.md"

license = {file = "LICENSE"}

description = "complex_opinion is a package for exploring opinion models in sociophysics, by wrapping networkx graphs, used as topologies, and adding to them different methods for the opinion dynamics."

keywords = [
    "complex_opinion",
    "sociophysics",
    "sociology",
    "physics",
    "modelling",
]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

urls = { Homepage = "https://github.com/JeroFotinos/ComplexOpinion", Repository = "https://github.com/JeroFotinos/ComplexOpinion" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["complex_opinion", "complex_opinion.*"]
namespaces = false